--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,13 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
+    buildToolsVersion '32.0.0'
 
     defaultConfig {
         applicationId "com.onefishtwo.appwidgetresize"
         minSdk 21
-        targetSdk 32
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
